compiler/testData/diagnostics/tests/backingField/ReadNonexistentPropertyInAnonymous.kt
class Cl() {
    constructor {
        val <!UNUSED_VARIABLE!>x<!> = <!UNRESOLVED_REFERENCE!>$a<!>
    }
}
